Fix TypeScript and ESLint errors, add build scripts

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "dev": "tsnd --respawn ./src/start.ts",
+    "build": "tsc",
+    "start": "node dist/start.js",
     "push": "npx prisma db push"
   },
   "devDependencies": {
