--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "dev": "tsnd --respawn ./src/start.ts",
     "build": "tsc",
     "start": "node dist/start.js",
+    "lint": "eslint src/**/*.ts --ext .ts",
+    "lint:fix": "eslint src/**/*.ts --ext .ts --fix",
     "push": "npx prisma db push"
   },
   "devDependencies": {
@@ -18,6 +20,9 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "prisma": "^6.11.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0"
   }
 }
