--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -108,76 +108,76 @@ jobs:
           path: ./server/dist
           retention-days: 30
 
-  # Деплой сервера на Railway
-  server-deploy-railway:
-    runs-on: ubuntu-latest
-    needs: server-build
-    if: github.ref == 'refs/heads/main'
-    environment: production
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # Деплой сервера на Railway (отключен для тестирования)
+  # server-deploy-railway:
+  #   runs-on: ubuntu-latest
+  #   needs: server-build
+  #   if: github.ref == 'refs/heads/main'
+  #   environment: production
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Download build artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: server-build
+  #         path: ./server/dist
+  #
+  #     - name: Deploy to Railway
+  #       uses: bervProject/railway-deploy@v1.0.0
+  #       with:
+  #         railway_token: ${{ secrets.RAILWAY_TOKEN }}
+  #         service: ${{ secrets.RAILWAY_SERVICE }}
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: server-build
-          path: ./server/dist
+  # Деплой сервера на Render (отключен для тестирования)
+  # server-deploy-render:
+  #   runs-on: ubuntu-latest
+  #   needs: server-build
+  #   if: github.ref == 'refs/heads/main'
+  #   environment: production
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Download build artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: server-build
+  #         path: ./server/dist
+  #
+  #     - name: Deploy to Render
+  #       run: |
+  #         curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
+  #           -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+  #           -H "Content-Type: application/json" \
+  #           -d '{"clearCache": "do_not_clear"}'
 
-      - name: Deploy to Railway
-        uses: bervProject/railway-deploy@v1.0.0
-        with:
-          railway_token: ${{ secrets.RAILWAY_TOKEN }}
-          service: ${{ secrets.RAILWAY_SERVICE }}
-
-  # Деплой сервера на Render (альтернатива)
-  server-deploy-render:
-    runs-on: ubuntu-latest
-    needs: server-build
-    if: github.ref == 'refs/heads/main'
-    environment: production
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: server-build
-          path: ./server/dist
-
-      - name: Deploy to Render
-        run: |
-          curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
-            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d '{"clearCache": "do_not_clear"}'
-
-  # Деплой на собственный сервер (SSH)
-  server-deploy-ssh:
-    runs-on: ubuntu-latest
-    needs: server-build
-    if: github.ref == 'refs/heads/main'
-    environment: production
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: server-build
-          path: ./server/dist
-
-      - name: Deploy to server via SSH
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            cd /var/www/tg-mini-app
-            git pull origin main
-            npm ci
-            npm run build
-            pm2 restart tg-mini-app 
+  # Деплой на собственный сервер (SSH) (отключен для тестирования)
+  # server-deploy-ssh:
+  #   runs-on: ubuntu-latest
+  #   needs: server-build
+  #   if: github.ref == 'refs/heads/main'
+  #   environment: production
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Download build artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: server-build
+  #         path: ./server/dist
+  #
+  #     - name: Deploy to server via SSH
+  #       uses: appleboy/ssh-action@v1.0.0
+  #       with:
+  #         host: ${{ secrets.SERVER_HOST }}
+  #         username: ${{ secrets.SERVER_USERNAME }}
+  #         key: ${{ secrets.SERVER_SSH_KEY }}
+  #         script: |
+  #           cd /var/www/tg-mini-app
+  #           git pull origin main
+  #           npm ci
+  #           npm run build
+  #           pm2 restart tg-mini-app 
