--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@prisma/client": "^6.11.0",
+    "@prisma/client": "^6.13.0",
     "@telegram-apps/init-data-node": "^2.0.10",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -19,10 +19,10 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "prisma": "^6.11.0",
-    "ts-node-dev": "^2.0.0",
-    "eslint": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0"
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.57.0",
+    "prisma": "^6.13.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
