--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@telegram-apps/init-data-node": "^2.0.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -10,16 +13,13 @@
   },
   "scripts": {
     "dev": "tsnd --respawn ./src/start.ts",
-    "build": "tsc",
+    "build": "npx prisma generate && tsc",
     "start": "node dist/start.js",
     "lint": "eslint src/**/*.ts --ext .ts",
     "lint:fix": "eslint src/**/*.ts --ext .ts --fix",
     "push": "npx prisma db push"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.10",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^8.57.0",
